@@ -39,6 +39,12 @@
 	  the NPC should fight back or not, instead of only party-vs-nonparty. Check
 	  is done in Actor::fight_back, and covers the cases mentioned in the (now
 	  deleted) comments, as well as a few other possibilities of friendly fire.
+	Rev 7300
+	* actor.cc: Eliminated both of the !rand()%N lines to make hostile NPCs more
+	  more hostile, and consolidated the two checks as they are now redundant.
+	* schedule.cc: Increased range of seek_foes, but requiring line-of-sight.
+	  These two combined fix most of the issues in bug #2694957 "Non-hostile
+	  Hostiles", with a few more fixes to come.
 
 2013-01-17	Malignant Manor <malignantmanor@users.sourceforge.net>
 	* Fix crash when a party member dies due to a trap
